Correções no CSS para alertas de sucesso e erro no preenchimento.

--- a/landing-page/aiese-81.html
+++ b/landing-page/aiese-81.html
@@ -94,7 +94,7 @@
 									</div>
 									<input type="text" class="form-control" id="inputEmail" placeholder="Relax, nós também odiamos spam">
 									<div class="valid-feedback"><i class="fas fa-check"></i></div>
-									<div class="invalid-feedback">Campo obrigatório</div>									
+									<div class="invalid-feedback">Campo obrigatório<i class="fas fa-times"></i></div>									
 								</div>
 							</div>
 							<div class="form-group">
