Melhorias no CSS em geral, correção do dropdown e alterações solicitadas

--- a/landing-page/aiese-81.html
+++ b/landing-page/aiese-81.html
@@ -25,7 +25,7 @@
 		<!-- Cabeçalho da página -->
 		<section class="header" id="header-voluntario-global">
 			<div class="container">
-				<div class="row justify-content-md-center">
+				<div class="row justify-content-center">
 					<div class="col-sm text-center">
 						<img src="assets/images/logo-voluntario-global.png" alt="Logo" class="logo">
 					</div>
@@ -36,15 +36,17 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm navy">
-						<p class="text-center">##</p>
+					<div class="col text-center">
+						<div class="custom-control custom-radio custom-control-inline">
+							<input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input" checked>
+							<label class="custom-control-label" for="customRadioInline1"></label>
+						</div>
+						<div class="custom-control custom-radio custom-control-inline">
+							<input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
+							<label class="custom-control-label" for="customRadioInline2"></label>
+						</div>						
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm text-center">
-						<img src="assets/images/step1.png" alt="Nome" class="steps-icons">
-					</div>
-				</div>
+				</div>				
 			</div>
 		</section>
 		<!-- Fim do cabeçalho da página -->
@@ -149,7 +151,7 @@
 			<!-- Cabeçalho da página -->
 			<section class="header" id="header-voluntario-global">
 				<div class="container">
-					<div class="row justify-content-md-center">
+					<div class="row justify-content-center">
 						<div class="col-sm text-center">
 							<img src="assets/images/logo-voluntario-global.png" alt="Logo" class="logo">
 						</div>
@@ -160,13 +162,15 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm navy">
-							<p class="text-center">##</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm text-center">
-							<img src="assets/images/step2.png" alt="Universidade" class="steps-icons">
+						<div class="col text-center">
+							<div class="custom-control custom-radio custom-control-inline">
+								<input type="radio" id="customRadioInline3" name="customRadioInline2" class="custom-control-input" checked>
+								<label class="custom-control-label" for="customRadioInline3"></label>
+							</div>
+							<div class="custom-control custom-radio custom-control-inline">
+								<input type="radio" id="customRadioInline4" name="customRadioInline2" class="custom-control-input">
+								<label class="custom-control-label" for="customRadioInline4"></label>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -276,7 +280,7 @@
 		<!-- Cabeçalho da página -->
 		<section class="header" id="header-voluntario-global">
 			<div class="container">
-				<div class="row justify-content-md-center">
+				<div class="row justify-content-center">
 					<div class="col-sm text-center">
 						<img src="assets/images/logo-voluntario-global.png" alt="Logo" class="logo">
 					</div>
@@ -288,9 +292,9 @@
 		<!-- Resultado do envio -->
 		<section class="content" id="resultado">
 			<div class="container">
-				<div class="row justify-content-md-center">
+				<div class="row justify-content-center">
 					<div class="col-sm">
-						<div class="row justify-content-md-center">
+						<div class="row justify-content-center">
 							<div class="col-sm-8" id="header-resultado">
 								<h2>Obrigado por se increver!</h2>
 								<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>						
@@ -299,7 +303,7 @@
 								<i class="fas fa-thumbs-up fa-10x color-icon"></i>
 							</div>
 						</div>
-						<div class="row justify-content-md-center">
+						<div class="row justify-content-center">
 							<div class="col-sm-12" id="content-resultado">
 								<p>
 									Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio social na data e destina ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
