CSS optimization for responsive and height option in general

--- a/landing-page/aiesec-81.html
+++ b/landing-page/aiesec-81.html
@@ -131,7 +131,7 @@
 							</div>
 							<div class="form-row buttons">
 								<div class="col text-left">
-									<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalCancelar">Cancelar</button>
+									<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalCancelar1">Cancelar</button>
 								</div>
 								<div class="col text-right">
 									<button type="button" class="btn btn-primary">Próximo</button>
@@ -260,7 +260,7 @@
 								<!-- Botões -->
 								<div class="form-row buttons">
 									<div class="col text-left">
-										<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalCancelar">Cancelar</button>
+										<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalCancelar2">Cancelar</button>
 									</div>
 									<div class="col text-right">
 										<button type="button" class="btn btn-primary">Enviar <i class="fas fa-paper-plane"></i></button>
@@ -318,7 +318,7 @@
 	</div>
 	
 	<!-- Modal Cancelar Step 1-->		
-	<div class="modal fade" id="modalCancelar" tabindex="-1" role="dialog" aria-labelledby="labelCancelar" aria-hidden="true">
+	<div class="modal fade" id="modalCancelar1" tabindex="-1" role="dialog" aria-labelledby="labelCancelar" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 		<div class="modal-header">
