Improvements in CSS and HTML aiesec-83.html

--- a/landing-page/aiesec-81.html
+++ b/landing-page/aiesec-81.html
@@ -142,7 +142,7 @@
 		</section>
 	</div>
 
-<hr style="background-color: #f85a3f;border: none;margin: 0;padding: 0;">
+<hr style="border: none;margin: 0;padding: 0;">
 
 	<!-- Step 2 -->
 	<div id="step2" class="form-volutario-global">
@@ -270,7 +270,7 @@
 			</section>
 		</div>
 
-<hr style="background-color: #f85a3f;border: none;margin: 0;padding: 0;">
+<hr style="border: none;margin: 0;padding: 0;">
 
 	<!-- Step 3 -->
 	<div id="step3" class="form-volutario-global">
@@ -291,7 +291,7 @@
 				<div class="row justify-content-center">
 					<div class="col-sm">
 						<div class="row justify-content-center">
-							<div class="col-sm-8" id="header-resultado">
+							<div class="col-sm" id="header-resultado">
 								<h2>Obrigado por se increver!</h2>
 								<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>						
 							</div>
