--- a/landing-page/aiesec-83.html
+++ b/landing-page/aiesec-83.html
@@ -142,7 +142,7 @@
 		</section>
 	</div>
 
-<hr style="background-color: #f85a3f;border: none;margin: 0;padding: 0;">
+<hr style="border: none;margin: 0;padding: 0;">
 
 	<!-- Step 2 -->
 	<div id="step2" class="form-talentos-globais">
@@ -156,7 +156,7 @@
 					</div>
 					<div class="row">
 						<div class="col-sm">
-							<h1>Ser um voluntário global é transformar seus valores em ação e fazer a diferença em diversas regiões do mundo.</h1>
+							<h1>Vivencie a realidade de uma empresa internacional, desenvola suas habilidades e traga o mundo para o seu currículo.</h1>
 						</div>
 					</div>
 					<div class="row">
@@ -184,14 +184,24 @@
 									<div class="input-group">
 										<div class="input-group-prepend">
 											<div class="input-group-text">
+												<i class="fas fa-graduation-cap"></i>Escolaridade</div>
+										</div>
+										<input type="text" class="form-control" id="inputGraduation" placeholder="Qual seu nível de escolaridade?">
+										<div class="valid-feedback"><i class="fas fa-check"></i></div>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="input-group">
+										<div class="input-group-prepend">
+											<div class="input-group-text">
 												<i class="fas fa-graduation-cap"></i>Universidade</div>
 										</div>
 										<div class="dropdown">
-											<button class="btn btn-info dropdown-toggle" type="button" id="dropdownOndeEstuda" data-toggle="dropdown" aria-haspopup="true"
+											<button class="btn btn-info dropdown-toggle" type="button" id="dropUniversity" data-toggle="dropdown" aria-haspopup="true"
 											 aria-expanded="false">
 												Onde você estuda?
 											</button>
-											<div class="dropdown-menu" aria-labelledby="dropdownOndeEstuda">
+											<div class="dropdown-menu" aria-labelledby="dropUniversity">
 												<a class="dropdown-item" href="#">Alguma ação</a>
 												<a class="dropdown-item" href="#">Outra ação</a>
 												<a class="dropdown-item" href="#">Alguma coisa aqui</a>
@@ -206,11 +216,49 @@
 												<i class="fas fa-book-open"></i>Curso</div>
 										</div>
 										<div class="dropdown">
-											<button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+											<button class="btn btn-info dropdown-toggle" type="button" id="dropCourse" data-toggle="dropdown" aria-haspopup="true"
 											aria-expanded="false">
-												Insira seu curso
+												Insira sua graduação aqui
 											</button>
-											<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+											<div class="dropdown-menu" aria-labelledby="dropCourse">
+												<a class="dropdown-item" href="#">Alguma ação</a>
+												<a class="dropdown-item" href="#">Outra ação</a>
+												<a class="dropdown-item" href="#">Alguma coisa aqui</a>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="input-group">
+										<div class="input-group-prepend">
+											<div class="input-group-text">
+												<i class="fas fa-book-open"></i>Nível de Inglês</div>
+										</div>
+										<div class="dropdown">
+											<button class="btn btn-info dropdown-toggle" type="button" id="dropEnglishLevel" data-toggle="dropdown" aria-haspopup="true"
+											aria-expanded="false">
+												Isso nos ajuda a te direcionar para as vagas mais adequadas
+											</button>
+											<div class="dropdown-menu" aria-labelledby="dropEnglishLevel">
+												<a class="dropdown-item" href="#">Alguma ação</a>
+												<a class="dropdown-item" href="#">Outra ação</a>
+												<a class="dropdown-item" href="#">Alguma coisa aqui</a>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="input-group">
+										<div class="input-group-prepend">
+											<div class="input-group-text">
+												<i class="fas fa-book-open"></i>Experiências</div>
+										</div>
+										<div class="dropdown">
+											<button class="btn btn-info dropdown-toggle" type="button" id="dropExperiences" data-toggle="dropdown" aria-haspopup="true"
+											aria-expanded="false">
+												Suas experiências passadas são muito importantes
+											</button>
+											<div class="dropdown-menu" aria-labelledby="dropExperiences">
 												<a class="dropdown-item" href="#">Alguma ação</a>
 												<a class="dropdown-item" href="#">Outra ação</a>
 												<a class="dropdown-item" href="#">Alguma coisa aqui</a>
@@ -270,7 +318,7 @@
 			</section>
 		</div>
 
-<hr style="background-color: #f85a3f;border: none;margin: 0;padding: 0;">
+<hr style="border: none;margin: 0;padding: 0;">
 
 	<!-- Step 3 -->
 	<div id="step3" class="form-talentos-globais">
@@ -291,7 +339,7 @@
 				<div class="row justify-content-center">
 					<div class="col-sm">
 						<div class="row justify-content-center">
-							<div class="col-sm-8" id="header-resultado">
+							<div class="col-sm" id="header-resultado">
 								<h2>Obrigado por se increver!</h2>
 								<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>						
 							</div>
