Bug fixes and improved viewing

--- a/landing-page/aiesec-81.html
+++ b/landing-page/aiesec-81.html
@@ -142,7 +142,7 @@
 		</section>
 	</div>
 
-<hr style="border: none;margin: 0;padding: 0;">
+<hr>
 
 	<!-- Step 2 -->
 	<div id="step2" class="form-volutario-global">
@@ -231,7 +231,7 @@
 											</button>
 											<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 												<a class="dropdown-item" href="#">UNIDADE ABC</a>
-												<a class="dropdown-item" href="#">UNIDADE ESPAM (Vila Mariana)</a>
+												<a class="dropdown-item" href="#">UNIDADE ESPAsM (Vila Mariana)</a>
 												<a class="dropdown-item" href="#">UNIDADE FGV (Bela Vista)</a>
 												<a class="dropdown-item" href="#">UNIDADE INSPER (Vila Olímpia)</a>
 												<a class="dropdown-item" href="#">UNIDADE MACKENZIE (Higienópolis)</a>
@@ -270,7 +270,7 @@
 			</section>
 		</div>
 
-<hr style="border: none;margin: 0;padding: 0;">
+<hr>
 
 	<!-- Step 3 -->
 	<div id="step3" class="form-volutario-global">
