--- a/landing-page/aiesec-83.html
+++ b/landing-page/aiesec-83.html
@@ -142,7 +142,7 @@
 		</section>
 	</div>
 
-<hr style="border: none;margin: 0;padding: 0;">
+<hr>
 
 	<!-- Step 2 -->
 	<div id="step2" class="form-talentos-globais">
@@ -183,10 +183,11 @@
 								<div class="form-group">
 									<div class="input-group">
 										<div class="input-group-prepend">
-											<div class="input-group-text">
+											<div class="input-group-text">												
 												<i class="fas fa-graduation-cap"></i>Escolaridade</div>
+											<div class="input-group-text"><i class="fas fa-info-circle help-right-icon"></i></div>
 										</div>
-										<input type="text" class="form-control" id="inputGraduation" placeholder="Qual seu nível de escolaridade?">
+										<input type="text" class="form-control help-right-text" id="inputGraduation" placeholder="Qual seu nível de escolaridade?">
 										<div class="valid-feedback"><i class="fas fa-check"></i></div>
 									</div>
 								</div>
@@ -318,7 +319,7 @@
 			</section>
 		</div>
 
-<hr style="border: none;margin: 0;padding: 0;">
+<hr>
 
 	<!-- Step 3 -->
 	<div id="step3" class="form-talentos-globais">
