Include CSS for input with right icon

--- a/landing-page/aiesec-83.html
+++ b/landing-page/aiesec-83.html
@@ -184,10 +184,13 @@
 									<div class="input-group">
 										<div class="input-group-prepend">
 											<div class="input-group-text">												
-												<i class="fas fa-graduation-cap"></i>Escolaridade</div>
-											<div class="input-group-text"><i class="fas fa-info-circle help-right-icon"></i></div>
+												<i class="fas fa-graduation-cap"></i>Escolaridade
+											</div>
+											<div class="input-group-text icon-right">
+												<i class="fas fa-info-circle"></i>
+											</div>
 										</div>
-										<input type="text" class="form-control help-right-text" id="inputGraduation" placeholder="Qual seu nível de escolaridade?">
+										<input type="text" class="form-control input-icon-right" id="inputGraduation" placeholder="Qual seu nível de escolaridade?">
 										<div class="valid-feedback"><i class="fas fa-check"></i></div>
 									</div>
 								</div>
