fix(*): changed programs forms routes + pixel integration
AIESEC-122 - https://devmagic.atlassian.net/secure/RapidBoard.jspa?rapidView=61&modal=detail&selectedIssue=AIESEC-122

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,39 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900,900i" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
+
+  <script type="text/javascript">
+	 var _gaq = _gaq || [];
+	 _gaq.push(['_setAccount', 'UA-29562174-2']);
+	 _gaq.push(['_trackPageview']);
+
+	 (function() {
+	   var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	 })();
+	</script>
+
+	<!-- Facebook Pixel Code -->
+	<script>
+	 !function(f,b,e,v,n,t,s)
+	 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	 n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	 n.queue=[];t=b.createElement(e);t.async=!0;
+	 t.src=v;s=b.getElementsByTagName(e)[0];
+	 s.parentNode.insertBefore(t,s)}(window, document,'script',
+	 'https://connect.facebook.net/en_US/fbevents.js');
+	 fbq('init', '531154527045235');
+	 fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	 src="https://www.facebook.com/tr?id=531154527045235&ev=PageView&noscript=1
+	https://www.facebook.com/tr?id=531154527045235&ev=PageView&noscript=1
+	"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+
 </head>
 
 <body>
