fix(mask): fixed telephone mask

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 
 <script>
 	// apply mask for telephone
-	jQuery("input.telefone")
+	jQuery("input.tel-mask")
 	.mask("(99) 9999-9999?9")
 	.focusout(function (event) {
 		var target, phone, element;
