feat(inputTel): added improvement input tel set cursor in begining

--- a/src/index.html
+++ b/src/index.html
@@ -83,4 +83,10 @@
 		}
 	});
 
+
+	$('#input.tel-mask').focusin(function () {
+		// set cursor in the begining
+		setTimeout(function () { $('#xuxa').get(0).setSelectionRange(0, 0); }, 100)
+	})
+
 	</script>
