fix(inputTel): fixed selector $

--- a/src/index.html
+++ b/src/index.html
@@ -84,9 +84,9 @@
 	});
 
 
-	$('#input.tel-mask').focusin(function () {
+	$("input.tel-mask").focusin(function () {
 		// set cursor in the begining
-		setTimeout(function () { $('#xuxa').get(0).setSelectionRange(0, 0); }, 100)
+		setTimeout(function () { $('input.tel-mask').get(0).setSelectionRange(0, 0); }, 100)
 	})
 
 	</script>
