--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900,900i" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
-	<script src="http://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
+	<script src="https://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
 
 
   <script type="text/javascript">
