--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
 	 t.src=v;s=b.getElementsByTagName(e)[0];
 	 s.parentNode.insertBefore(t,s)}(window, document,'script',
 	 'https://connect.facebook.net/en_US/fbevents.js');
-	 fbq('init', '531154527045235');
-	 fbq('init', '2083757008560964');
-	 fbq('track', 'PageView');
+	//  fbq('init', '531154527045235');
+	//  fbq('init', '2083757008560964');
+	//  fbq('track', 'PageView');
 	</script>
 	<noscript><img height="1" width="1" style="display:none"
 	 src="https://www.facebook.com/tr?id=531154527045235&ev=PageView&noscript=1
