feat(embedded): all forms added - example

--- a/embedded.html
+++ b/embedded.html
@@ -1,6 +1,31 @@
 <div style="height: 700px;">
   <blockquote style="margin: 0; height: 100%; width: 100%;">
-    <iframe id="theFrame" src="http://d2r6p8mms29sdx.cloudfront.net/intercambio?embedded=true" style="width:100%; height: 100%;" frameborder="0">
+    <iframe id="theFrame" src="http://d2r6p8mms29sdx.cloudfront.net/intercambio?embedded=true" style="width:100%; height: 100%;"
+      frameborder="0">
+    </iframe>
+  </blockquote>
+</div>
+
+<div style="height: 700px;">
+  <blockquote style="margin: 0; height: 100%; width: 100%;">
+    <iframe id="theFrame" src="http://d2r6p8mms29sdx.cloudfront.net/formulario-voluntario-global?embedded=true" style="width:100%; height: 100%;"
+      frameborder="0">
+    </iframe>
+  </blockquote>
+</div>
+
+<div style="height: 700px;">
+  <blockquote style="margin: 0; height: 100%; width: 100%;">
+    <iframe id="theFrame" src="http://d2r6p8mms29sdx.cloudfront.net/formulario-talento-global?embedded=true" style="width:100%; height: 100%;"
+      frameborder="0">
+    </iframe>
+  </blockquote>
+</div>
+
+<div style="height: 700px;">
+  <blockquote style="margin: 0; height: 100%; width: 100%;">
+    <iframe id="theFrame" src="http://d2r6p8mms29sdx.cloudfront.net/formulario-empreendedor-global?embedded=true" style="width:100%; height: 100%;"
+      frameborder="0">
     </iframe>
   </blockquote>
 </div>
