feat(forms, landing page): all forms mobile have modal with terms and landing page forms scale fixed

--- a/src/assets/terms/terms.html
+++ b/src/assets/terms/terms.html
@@ -42,12 +42,21 @@
 		::-webkit-scrollbar-thumb:hover {
 			background: #555;
 		}
+
+		main {
+			width: 1px;
+			min-width: 100%;
+			*width: 100%;
+			overflow: auto;
+		}
+		
 	</style>
 </head>
 
 
 </style>
 <html>
+	<main>
 <h1>
 	Privacy Policy
 </h1>
@@ -440,5 +449,5 @@
 <p>
 	This document was last updated on April 21, 2017
 </p>
-
+</main>
 </html>
