--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>AIESEC no Brasil - Liderança através de Intercâmbio</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="A AIESEC é o maior movimento de liderança jovem do mundo. Acreditamos no intercâmbio como ferramenta para desenvolver uma liderança ativa e sustentável.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900,900i" rel="stylesheet">
