--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AIESEC no Brasil - Liderança através de Intercâmbio</title>
+  <title>AIESEC Argentina - Liderazgo a través de intercambio</title>
   <base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
