--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,14 @@
 
 	<!-- Facebook Pixel Code -->
 	<script>
-	 !function(f,b,e,v,n,t,s)
-	 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	 n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-	 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-	 n.queue=[];t=b.createElement(e);t.async=!0;
-	 t.src=v;s=b.getElementsByTagName(e)[0];
-	 s.parentNode.insertBefore(t,s)}(window, document,'script',
-	 'https://connect.facebook.net/en_US/fbevents.js');
+		!function(f,b,e,v,n,t,s)
+			{if(f.f‌bq)return;n=f.f‌bq=function(){n.callMethod?
+			n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+			if(!f._f‌bq)f._f‌bq=n;n.push=n;n.loaded=!0;n.version='2.0';
+			n.queue=[];t=b.createElement(e);t.async=!0;
+			t.src=v;s=b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t,s)}(window, document,'script',
+			'https://connect.facebook.net/en_US/fbevents.js');
 	</script>
 	<!-- End Facebook Pixel Code -->
 
@@ -58,13 +58,8 @@
 
 <body>
 		<noscript><img height="1" width="1" style="display:none"
-			src="https://www.facebook.com/tr?id=531154527045235&ev=PageView&noscript=1
-		 https://www.facebook.com/tr?id=531154527045235&ev=PageView&noscript=1
-		 "
-		 /></noscript>
-		 <noscript><img height="1" width="1" style="display:none"
-			src="https://www.facebook.com/tr?id=2083757008560964&ev=PageView&noscript=1
-		 https://www.facebook.com/tr?id=2083757008560964&ev=PageView&noscript=1
+			src="https://www.facebook.com/tr?id=786594798205999&ev=PageView&noscript=1
+		 https://www.facebook.com/tr?id=786594798205999&ev=PageView&noscript=1
 		 "
 		 /></noscript>
 
