--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,14 @@
 	<!-- End Facebook Pixel Code -->
 
   <!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-PLG5FR2');</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		
+		gtag('config', 'UA‌-134133610-1');
+	</script>
+		
 	<!-- End Google Tag Manager -->
 
 	<script type="text/javascript">
@@ -65,7 +68,7 @@
 
 	  <!-- Google Tag Manager (noscript) -->
 		<noscript>
-			<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PLG5FR2" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+			<iframe src="https://www.googletagmanager.com/gtag/js?id=UA-134133610-1" height="0" width="0" style="display: none; visibility: hidden"></iframe>
 		</noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
