chore(index): script added

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900,900i" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 	<script src="https://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
+	
 
 	<!-- Google GTag -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-29562174-6"></script>
@@ -50,6 +51,7 @@
 
 	<link rel="manifest" href="manifest.json">
 	<meta name="theme-color" content="#1976d2">
+	<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0757ca0c-951f-49ed-8de6-2726fd50c50b";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 
 <body>
