feat(app.component*)add cookie message about covid-19 virus

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900,900i" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
-	<script src="https://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
-	
+  <script src="https://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 	<!-- Google GTag -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-29562174-6"></script>
